apps/services/obsidian/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: services
spec:
  selector:
    app: obsidian
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  - name: websocket
    protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP
