apps/services/obsidian/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian
  namespace: services
  annotations:
    external-dns.alpha.kubernetes.io/hostname: obsidian.lab.apj.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: obsidian
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`obsidian.lab.apj.dev`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: obsidian
          port: 3000
  tls:
    secretName: lab-apj-dev-tls
